--- a/src/components/StatusBar/StatusBar.module.css
+++ b/src/components/StatusBar/StatusBar.module.css
@@ -1,14 +1,15 @@
 .element_container {
   display: flex;
   flex-direction: row;
+  justify-content: space-between;
 }
 .barLable {
-  width: 30%;
+  width: 45%;
   text-align: left;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  padding-right: 50px;
+  padding-right: 5%;
 }
 
 .feedbackCount {
@@ -17,7 +18,7 @@
 }
 .status_bar_container {
   position: relative;
-  width: 70%;
+  width: 50%;
   background-color: #f0f0f0;
   border: 1px solid #ccc;
   border-radius: 5px;
